--- a/Lab-05-starter/firmware/Lab-05-starter.X/nbproject/Makefile-genesis.properties
+++ b/Lab-05-starter/firmware/Lab-05-starter.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Thu Jul 10 11:09:10 PDT 2025
+#Thu Aug 14 15:43:04 PDT 2025
 sam_e51_cnano.platformTool.md5=null
 sam_e51_cnano.languagetoolchain.version=4.60
 conf.ids=sam_e51_cnano
-host.id=1c6b-ktb4-vq
-configurations-xml=193b5787cac0ca4b9ea9133d84a74ae0
-sam_e51_cnano.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=9fd32f1fddb30a021686652ad9cf7f89
+host.id=1al3-veov-lt
+configurations-xml=4ce4114f254aa14a70e5c6e1b3375180
+sam_e51_cnano.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=1eaf555a844840d91945cb14109201c3
 sam_e51_cnano.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.60\\bin
-sam_e51_cnano.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.25\\packs\\Microchip\\SAME51_DFP\\3.8.253
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6cd85c1014597ae4d039afea70fe46c5
+sam_e51_cnano.Pack.dfplocation=C\:\\Users\\lunch\\.mchp_packs\\Microchip\\SAME51_DFP\\3.8.253
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 proj.dir=C\:\\Users\\lunch\\Documents\\GitHub\\CISC-211-Lab-05-Division\\Lab-05-starter\\firmware\\Lab-05-starter.X
 host.platform=windows
