--- a/Lab-05-starter/firmware/Lab-05-starter.X/nbproject/Makefile-genesis.properties
+++ b/Lab-05-starter/firmware/Lab-05-starter.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Sun Aug 31 20:23:06 PDT 2025
+#Thu Sep 25 13:05:45 PDT 2025
 sam_e51_cnano.languagetoolchain.version=4.60
 conf.ids=sam_e51_cnano
-host.id=1c6b-ktb4-vq
-configurations-xml=b1fb6079382c16cc77fb34d7f1eb9251
+host.id=0
+configurations-xml=eb0b65de681abbcb0d82f7b1f6e3844f
 sam_e51_cnano.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=1eaf555a844840d91945cb14109201c3
-sam_e51_cnano.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.60\\bin
-sam_e51_cnano.Pack.dfplocation=C\:\\Users\\lunch\\.mchp_packs\\Microchip\\SAME51_DFP\\3.8.253
+sam_e51_cnano.languagetoolchain.dir=/Applications/microchip/xc32/v4.60/bin
+sam_e51_cnano.Pack.dfplocation=/Users/vitobica2/.mchp_packs/Microchip/SAME51_DFP/3.8.253
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 sam_e51_cnano.com-microchip-mplab-mdbcore-AtmelIceScripting-AtmelIceScriptingBase.md5=d43f5c951d9688e0858d181444d084d4
-proj.dir=C\:\\Users\\lunch\\Documents\\GitHub\\CISC-211-Lab-05-Division\\Lab-05-starter\\firmware\\Lab-05-starter.X
-host.platform=windows
+proj.dir=/Users/vitobica2/Documents/GitHub/CISC-211-Lab-05-Division/Lab-05-starter/firmware/Lab-05-starter.X
+host.platform=mac
