--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,6 @@
 *.c~
 *.DS_Store
 /Lab-05-starter/firmware/Lab-05-starter.X/build/
+/Lab-05-starter/firmware/Lab-05-starter.X/dist/
+Makefile-*
 *.un~
